--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is jorian."
+description: "Aiming to discover a new world!"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
